# yuna-feed

./: README.md
admin/yunapbx-zabbix/: Makefile
admin/zabbix/: Config.in  Makefile
admin/zabbix-agent-tls/: Makefile
kernel/kmod-cpufreq-powersaver/: Makefile
kernel/kmod-hwmon-via-cputemp/: Makefile
kernel/via/: Makefile
kmod-via/: Makefile
lang/luadbi/: Makefile
lang/php7/: Makefile
libs/apr/: Makefile
libs/icu/: Makefile
libs/iksemel/: Makefile
libs/libiconv-full/: Makefile
libs/libnspr/: Makefile
libs/libnss/: Makefile
libs/libphonenumber/: Makefile
libs/libphonenumber-php/: Makefile
libs/libsrtp/: Makefile
libs/libtalloc/: Makefile
libs/libtevent/: Makefile
libs/mariadb-connector-odbc/: Makefile
libs/mysql-connector-odbc/: Makefile
libs/phonenumber/: Makefile
libs/phonenumber-php/: Makefile
libs/pjproject/: Makefile
libs/protobuf/: Makefile
libs/speex/: Makefile
libs/speexdsp/: Makefile
net/apache/: Makefile
net/asterisk-11.x/: Makefile
net/asterisk-13.x/: Makefile
net/asterisk-phonenumber/: Makefile
net/asterisk13-codec-opus/: Makefile
net/asterisk13-codec-silk/: Makefile
net/asterisk15-codec-opus/: Makefile
net/asterisk15-codec-silk/: Makefile
net/asterisk16-codec-opus/: Makefile
net/asterisk16-codec-silk/: Makefile
net/chan-dongle/: Makefile
net/krb5/: Makefile
net/modsecurity/: Makefile
net/redis/: Makefile
net/statsite/: Makefile
net/vmware-uag/: Makefile
net/yunapbx-appliance-fx130/: Makefile
net/yunapbx-appliance-hardware/: Makefile
system/logd/src/: CMakeLists.txt
(+193 files in other folders)
